--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Setup dotnet
-      uses: actions/setup-dotnet@v3
+    - uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '6.0.x'
+        dotnet-version: '3.1.x'
     - name: Build
       run: dotnet build --configuration Release
     - name: Test
